<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="fr.abennsir.poc.album.app.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_navigation_graph_album"
            app:destination="@id/navigation_graph_album">
            <argument
                android:name="configuration"
                app:argType="fr.abennsir.poc.album.app.gallery.data.Config" />
        </action>
    </fragment>

    <navigation
        android:id="@+id/navigation_graph_album"
        app:startDestination="@id/albumFragment">
        <fragment
            android:id="@+id/albumFragment"
            android:name="fr.abennsir.poc.album.app.gallery.ui.AlbumFragment"
            android:label="@string/label_album_fragment">
            <argument
                android:name="configuration"
                app:argType="fr.abennsir.poc.album.app.gallery.data.Config" />

            <action
                android:id="@+id/action_AlbumFragment_to_carouselDetailFragment"
                app:destination="@id/carouselDetailFragment" />
        </fragment>
        <fragment
            android:id="@+id/carouselDetailFragment"
            android:name="fr.abennsir.poc.album.app.gallery.ui.CarouselDetailFragment"
            android:label="@string/label_carousel_fragment">
            <argument
                android:name="configuration"
                app:argType="fr.abennsir.poc.album.app.gallery.data.Config" />
            <argument
                android:name="selected_position_key"
                app:argType="integer"
                android:defaultValue="-1" />
            <argument
                android:name="selected_photo_id_key"
                app:argType="long"
                android:defaultValue="-1L" />
        </fragment>
    </navigation>

</navigation>


